--- a/admin/manifest.json
+++ b/admin/manifest.json
@@ -1,24 +1,25 @@
 {
   "name": "gps",
   "short_name": "GPS",
-  "start_url": "https://puroome.github.io/gps/admin/index.html",
+  "start_url": "https://puroome.github.io/pin/admin/index.html",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
   "theme_color": "#000000",
-  "scope": "https://puroome.github.io/gps/admin/",
+  "scope": "https://puroome.github.io/pin/admin/",
   "icons": [
     {
-      "src": "https://puroome.github.io/gps/admin/icon_192.png",
+      "src": "https://puroome.github.io/pin/admin/icon_192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://puroome.github.io/gps/admin/icon_512.png",
+      "src": "https://puroome.github.io/pin/admin/icon_512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 
 }
+
 
